# cargo-lambda-prototype

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  role-template.yaml  rustfmt.toml  template-auth.yaml  template.yaml
src/: main.rs
